<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_accounts"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_0dp"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:fadeScrollbars="false" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include
        android:id="@+id/layout_error"
        layout="@layout/error_layout"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
