...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsSmall"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_clientSharingAccountNumber"
            style="@style/Mifos.DesignSystem.TextStyle.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/medium_text" />
...
            style="@style/Mifos.DesignSystem.TextStyle.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_text" />

        <LinearLayout
            android:id="@+id/ll_account_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginWords"
            android:orientation="horizontal"
            android:visibility="visible">

...
