<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This project is licensed under the open source MPL V2.
  ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/ll_make_transfer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <org.mifos.mobile.utils.ProcessView
                        android:id="@+id/process_one"
                        android:layout_width="@dimen/width_40dp"
                        android:layout_height="@dimen/height_40dp"
                        app:value="1" />

                    <View
                        android:layout_width="@dimen/width_4dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/light_grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_marginBottom="@dimen/default_padding"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/default_margin">

                    <TextView
                        android:id="@+id/tv_pay_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_from"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <Spinner
                        android:id="@+id/sp_pay_from"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_10dp"
                        android:prompt="@string/select_pay_from"
                        android:spinnerMode="dialog" />

                    <Button
                        android:id="@+id/btn_pay_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsSmall"
                        android:text="@string/continue_str" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <org.mifos.mobile.utils.ProcessView
                        android:id="@+id/process_two"
                        android:layout_width="@dimen/width_40dp"
                        android:layout_height="@dimen/height_40dp"
                        app:value="2" />

                    <View
                        android:layout_width="@dimen/width_4dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/light_grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_marginBottom="@dimen/default_padding"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/default_margin">

                    <TextView
                        android:id="@+id/tv_pay_to"
                        style="@style/Mifos.DesignSystem.TextStyle.Body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/beneficiary" />

                    <TextView
                        android:id="@+id/tv_select_beneficary"
                        style="@style/Mifos.DesignSystem.TextStyle.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_beneficiary" />

                    <TextView
                        android:id="@+id/tv_add_beneficiary_msg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_beneficiary_found_please_add"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/light_grey"
                        android:visibility="gone" />

                    <Spinner
                        android:id="@+id/sp_beneficiary"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_10dp"
                        android:prompt="@string/select_beneficiary"
                        android:spinnerMode="dialog"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_pay_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin"
                        android:text="@string/continue_str"
                        android:textColor="@color/white"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_add_beneficiary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin"
                        android:text="@string/add_beneficiary"
                        android:textColor="@color/white"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <org.mifos.mobile.utils.ProcessView
                        android:id="@+id/process_three"
                        android:layout_width="@dimen/width_40dp"
                        android:layout_height="@dimen/height_40dp"
                        app:value="3" />

                    <View
                        android:layout_width="@dimen/width_4dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/light_grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_marginBottom="@dimen/default_padding"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/default_margin">

                    <TextView
                        style="@style/Mifos.DesignSystem.TextStyle.Body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/amount" />

                    <TextView
                        android:id="@+id/tv_select_amount"
                        style="@style/Mifos.DesignSystem.TextStyle.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_amount" />

                    <EditText
                        android:id="@+id/et_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/amount"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/layout_padding_16dp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin"
                        android:text="@string/continue_str"
                        android:textColor="@color/white"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <org.mifos.mobile.utils.ProcessView
                        android:id="@+id/process_four"
                        android:layout_width="@dimen/width_40dp"
                        android:layout_height="@dimen/height_40dp"
                        app:value="4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_marginBottom="@dimen/default_padding"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/default_margin">

                    <TextView
                        style="@style/Mifos.DesignSystem.TextStyle.Body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/remark" />

                    <EditText
                        android:id="@+id/et_remark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/remark"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:paddingBottom="@dimen/layout_padding_16dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_enter_remark"
                        style="@style/Mifos.DesignSystem.TextStyle.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_remarks" />

                    <LinearLayout
                        android:id="@+id/ll_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <Button
                            android:id="@+id/btn_cancel_transfer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10dp"
                            android:layout_marginBottom="@dimen/margin_16dp"
                            android:layout_weight="0.5"
                            android:text="@string/feature_account_cancel"
                            android:textColor="?attr/colorPrimary"
                            app:backgroundTint="@color/white" />

                        <Button
                            android:id="@+id/btn_review_transfer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10dp"
                            android:layout_marginBottom="@dimen/margin_16dp"
                            android:layout_weight="0.5"
                            android:text="@string/review_transfer"
                            android:textColor="@color/white"
                            tools:ignore="ButtonStyle" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/layout_error"
        layout="@layout/error_layout"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
