...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/amount" />

                <TextView
                    android:id="@+id/tv_amount"
                    style="@style/Mifos.DesignSystem.TextStyle.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="@string/amount" />

...
                <View
                    style="@style/Mifos.DesignSystem.Components.HorizontalSpacer"
                    android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginWords"
                    android:layout_marginBottom="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsLarge" />

                <LinearLayout
                    android:id="@+id/ll_transfer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
...
